Configure CORS for deployed frontend